# seidor-devops-project-kubecamp

./: Kubecamp.postman_collection.json  README.md  project-kubecamp-0.1.0.tgz
project-kubecamp/: Chart.yaml  values.yaml
project-kubecamp/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
project-kubecamp/templates/go-auth/: deployment.yaml  service.yaml
project-kubecamp/templates/java-catalog/: deployment.yaml  service.yaml
project-kubecamp/templates/php-progress/: deployment.yaml  service.yaml
project-kubecamp/templates/python-discuss/: deployment.yaml  service.yaml
project-kubecamp/templates/tests/: test-connection.yaml
project_kubecamp/: Chart.yaml  values.yaml
project_kubecamp/templates/: NOTES.txt  _helpers.tpl  hpa.yaml  ingress.yaml  serviceaccount.yaml
project_kubecamp/templates/java-catalog/: deployment.yaml  service.yaml
services/: docker-compose.yml  nginx.conf
services/go-auth/: .default.env  Dockerfile  Dockerfile.test  GO devOps micro.postman_collection.json  Jenkinsfile  dev.Dockerfile  docker-compose.t.yaml  docker-compose.yaml  go.mod  go.sum  main.go  readme.md
services/java-catalog/: Jenkinsfile  Kubecamp.Catalog.postman_collection.json  build.gradle  settings.gradle
services/php-progress/: Dockerfile  Jenkinsfile  composer.json  dev.Dockerfile  docker-compose.yml  nginx.conf
services/python-discuss/: .env.example  Dockerfile  Jenkinsfile  README.md  dev.Dockerfile  dev.py  docker-compose.yml  pyproject.toml
services/python-discuss/src/: main.py
(+38 files in other folders)
